--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby": "^4.8.0",
     "gatsby-plugin-image": "^2.10.0",
     "gatsby-plugin-postcss": "^5.8.0",
+    "gatsby-plugin-react-helmet": "^5.10.0",
     "gatsby-plugin-sharp": "^4.10.1",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^4.10.0",
@@ -29,6 +30,7 @@
     "postcss": "^8.4.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "tailwindcss": "^3.0.23"
   }
 }
