--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "autoprefixer": "^10.4.2",
     "gatsby": "^4.8.0",
     "gatsby-plugin-image": "^2.10.0",
+    "gatsby-plugin-next-seo": "^1.10.0",
     "gatsby-plugin-postcss": "^5.8.0",
     "gatsby-plugin-react-helmet": "^5.10.0",
     "gatsby-plugin-sharp": "^4.10.1",
@@ -31,6 +32,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.2.3",
     "tailwindcss": "^3.0.23"
   }
 }
