--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.2.3",
+    "react-icons": "^4.3.1",
     "tailwindcss": "^3.0.23"
   }
 }
