--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gsap": "^3.9.1",
     "html-react-parser": "^1.4.9",
     "postcss": "^8.4.6",
+    "postcss-import": "^14.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
